# Reywen-Revolt

./: .env.example  .example.rs  .gitignore  4  Cargo.toml  README.md  auth.json  bridge.json  config.json  j.sh  reywen.json  start.sh
.fleet/: run.json
.github/workflows/: apisec-scan.yml  rust-clippy.yml  rust.yml
.podman/: debian.sh  debtemp.sh  deploy.sh
archive/: Cargo.toml  README.md  config.json
archive/src/: reywen.rs
automation/: compile_test.sh
config/: bridge.json  e6.json  message.json  plural.json  reywen.json  shell.json
example/: plugin.rs
examples/: vlod.rs
src/: br.rs  client.rs  debug.rs  fs.rs  lib.rs  lreywen.rs  main.rs  rev_curl.rs  rev_x.rs  websocket.rs
src/bonfire/: bonfire.rs
src/client/: mod.rs
src/client/methods/: autumn.rs  bot.rs  channel.rs  emoji.rs  group.rs  member.rs  message.rs  mod.rs  permissions.rs  server.rs  session.rs  user.rs
src/delta/: delta.rs  fs.rs  lreywen.rs  mongo.rs  oop.rs
src/lib/: auth.rs  conf.rs  fs.rs  lreywen.rs  message.rs  mongo.rs  oop.rs  rev_x.rs  user.rs  websocket.rs
src/methods/: bots.rs  channel.rs  member.rs  message.rs  relationships.rs  server.rs  user.rs
src/plugins/: .shell.rs.swp  bridge.rs  e6.rs  lreywen.rs  message.rs  oop.rs  plural.rs  shell.rs
src/quark/: bonfire.rs  mongo.rs
src/quark/delta/: auth.rs  message.rs  user.rs
src/structs/: attachment.rs  auth.rs  bots.rs  channel.rs  message.rs  server.rs  user.rs
src/structures/: emoji.rs  mod.rs
src/structures/authentication/: login.rs  mfa.rs  mod.rs  session.rs
src/structures/channels/: channel.rs  channel_invite.rs  group.rs  message.rs  mod.rs
src/structures/media/: attachment.rs  convert.rs  embeds.rs  emoji.rs  mod.rs
src/structures/permissions/: calculator.rs  definitions.rs  mod.rs  newcalc.rs
src/structures/server/: ban.rs  member.rs  mod.rs  server.rs  server_ban.rs
src/structures/users/: bot.rs  mod.rs  user.rs
src/tests/: bots.rs  channels.rs  emoji.rs  experiments.rs  mod.rs  servers.rs  session.rs  users.rs  websocket.rs
src/websocket/: data.rs  error.rs  mod.rs  process.rs
src/websocket/result/: error.rs  mod.rs  traits.rs
