[package]
name = "reywen"
version = "0.1.16"
edition = "2021"
description = "A fast and simple framework for creating bots for revolt.chat"
license = "GPL-3.0-only"
documentation = "https://docs.rs/reywen/latest/reywen/"


[dependencies]

# revolt compat
iso8601-timestamp = "0.2.11"
validator = "0.16.1"
num_enum = "0.6.1"
indexmap = { version = "2.0.0", features = ["serde"] }

# serde
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"

# misc
rand = "0.8.5"

# async
tokio = { version = "1.29.1", features = ["net", "macros"] }
futures-util = "0.3.28"

# http
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
reywen_http = { version = "0.1.13", features = ["serde"] }



[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "thin"
