[package]
name = "reywen"
version = "0.1.23"
edition = "2021"
description = "A fast and simple framework for creating bots for revolt.chat"
license = "GPL-3.0-only"
documentation = "https://docs.rs/reywen/latest/reywen/"


[dependencies]

# revolt compat
iso8601-timestamp = "0.2.10"
validator = "0.16.0"
num_enum = "0.7.0"
indexmap = { version = "2.0.0", features = ["serde"] }

# serde
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.94"

# misc
rand = "0.8.5"

# async
tokio = { version = "1.29.1", features = ["net", "macros"] }
futures-util = "0.3.28"

# http
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
reywen_http = { version = "0.1.13", features = ["serde"] }




[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "thin"



[dev-dependencies] # for examples
tokio = { version = "1.29.1", features = ["net", "macros", "rt-multi-thread", "fs"] }
urlencoding = "2.1.2"
toml = "0.8.1"
reywen = { path = "." }
reywen_http = { version = "0.1.13", features = ["serde"] }
