[package]
name = "reywen"
version = "0.1.30"
edition = "2021"
description = "A fast and simple framework for creating bots for revolt.chat"
license = "GPL-3.0-only"
documentation = "https://docs.rs/reywen/latest/reywen/"


[dependencies]

# revolt compat
iso8601-timestamp = "0.2.17"
validator = "0.18.1"
num_enum = "0.7.0"
indexmap = { version = "2.2.6", features = ["serde"] }

# serde
serde = { version = "1.0.198", features = ["derive"]}
serde_json = { version = "1.0.116"}

# misc
rand = "0.8.5"

# async
tokio = { version = "1.37.0", features = ["net", "macros", "sync"] }
futures-util = "0.3.30"

# http
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
reywen_http = { version = "0.1.18", features = ["serde"]}
native-tls = "0.2.11"
url = "2.5.0"

# development
dotenv = "0.15.0"

[features]
# engine option | mandatory
default = ["reywen_http/hyper_engine"]
wasm = ["reywen_http/reqwasm_engine"]


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "thin"



[dev-dependencies] # for examples
tokio = { version = "1.29.1", features = ["net", "macros", "rt-multi-thread", "fs"] }
urlencoding = "2.1.2"
toml = "0.8.2"
reywen = { path = "." }

